--- a/src/components/Layout/components/Header/Header.module.scss
+++ b/src/components/Layout/components/Header/Header.module.scss
@@ -19,9 +19,21 @@
   justify-content: space-between;
 }
 
+.search,
+.search-result {
+  width: 361px;
+}
+
+.search-title {
+  padding: 5px 12px;
+  color: rgba(22, 24, 35, 0.5);
+  font-weight: 600;
+  font-size: 1.4rem;
+  line-height: 20px;
+}
+
 .search {
   position: relative;
-  width: 361px;
   height: var(--search-height);
   padding-left: 16px;
   display: flex;
