--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -28,6 +28,12 @@
   margin-left: 8px;
 }
 
+.icon {
+  display: inline-block;
+  width: 24px;
+  text-align: center;
+}
+
 //Button type
 .rounded {
   border-radius: 92px;
@@ -77,7 +83,4 @@
 .large {
   min-width: 140px;
   line-height: 34px;
-}
-
-.disabled {
 }
