--- a/src/components/GlobalStyles/GlobalStyle.scss
+++ b/src/components/GlobalStyles/GlobalStyle.scss
@@ -1,11 +1,11 @@
 @import "normalize.css";
-@import url("https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@100;300;400;500;600;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Inter+Tight:ital,wght@0,100..900;1,100..900&display=swap");
 
 :root {
   --primary: #fe2c55;
   --black: #000;
   --white: rgb(255, 255, 255);
-  --text-color: #333;
+  --text-color: #161823;
 
   //DefaultLayout'
   --default-layout-header-height: 60px;
@@ -24,7 +24,7 @@ html {
 }
 
 body {
-  font-family: "IBM Plex Sans", san-serif;
+  font-family: "Inter Tight", sans-serif;
   font-size: 1.6rem;
   line-height: 1.5;
   text-rendering: optimizeSpeed;
@@ -33,6 +33,7 @@ body {
 button,
 input,
 [tabindex] {
+  font-family: "Inter Tight", sans-serif;
   outline: none;
   border: none;
 }
@@ -40,4 +41,27 @@ input,
 a[href] {
   color: var(--text-color);
   text-decoration: none;
+}
+
+//Custom tippy tooltip
+body {
+  .tippy-box {
+    border-radius: 8px;
+    font-weight: 600;
+    font-size: 1.6rem;
+    line-height: 2.2rem;
+    background-color: rgba(84, 84, 84, 0.92);
+  }
+
+  .tippy-arrow {
+    color: rgba(84, 84, 84, 0.92);
+  }
+
+  .tippy-content {
+    padding: 8px 9px;
+  }
+
+  .tippy-box[data-placement^="bottom"] > .tippy-arrow:before {
+    top: -8px;
+  }
 }
