--- a/src/components/Layout/components/Header/Header.module.scss
+++ b/src/components/Layout/components/Header/Header.module.scss
@@ -100,10 +100,32 @@
   }
 }
 
+//Action
+.actions {
+  display: flex;
+  align-items: center;
+}
+
 .more-btn {
   font-size: 2rem;
   margin-left: 28px;
   padding: 4px 8px;
   background-color: transparent;
+  cursor: pointer;
+}
+
+.action-btn {
+  color: rgba(22, 24, 35);
+  font-size: 2.2rem;
+  background-color: transparent;
+  padding: 4px 12px;
+  cursor: pointer;
+}
+
+.user-avatar {
+  margin-left: 12px;
+  width: 32px;
+  border-radius: 50%;
+  object-fit: cover;
   cursor: pointer;
 }
