--- a/src/components/Popper/Menu/Menu.module.scss
+++ b/src/components/Popper/Menu/Menu.module.scss
@@ -16,8 +16,13 @@
   width: 100%;
   justify-content: flex-start;
   border-radius: 0;
-  font-weight: 700;
+  font-weight: 600;
   padding: 8px 16px;
+  color: var(--text-color);
+
+  &.separate {
+    border-top: 1px solid rgba(22, 24, 35, 0.12);
+  }
 
   &:hover {
     background-color: rgba(22, 24, 35, 0.03);
