--- a/src/components/GlobalStyles/GlobalStyle.scss
+++ b/src/components/GlobalStyles/GlobalStyle.scss
@@ -1,5 +1,4 @@
 @import "normalize.css";
-@import url("https://fonts.googleapis.com/css2?family=Inter+Tight:ital,wght@0,100..900;1,100..900&display=swap");
 
 :root {
   --primary: #fe2c55;
@@ -24,7 +23,7 @@ html {
 }
 
 body {
-  font-family: "Inter Tight", sans-serif;
+  font-family: "TikTokFont", sans-serif;
   font-size: 1.6rem;
   line-height: 1.5;
   text-rendering: optimizeSpeed;
@@ -33,7 +32,6 @@ body {
 button,
 input,
 [tabindex] {
-  font-family: "Inter Tight", sans-serif;
   outline: none;
   border: none;
 }
@@ -41,6 +39,37 @@ input,
 a[href] {
   color: var(--text-color);
   text-decoration: none;
+}
+
+// Fonts emmbeded
+@font-face {
+  font-family: TikTokDisplayFont;
+  src: url("/assets/fonts/TikTokDisplayFont-Bold.woff2");
+  font-weight: 700;
+}
+
+@font-face {
+  font-family: TikTokDisplayFont;
+  src: url("/assets/fonts/TikTokDisplayFont-Semibold.woff2");
+  font-weight: 600;
+}
+
+@font-face {
+  font-family: TikTokFont;
+  src: url("/assets/fonts/TikTokFont-Bold.woff2");
+  font-weight: 700;
+}
+
+@font-face {
+  font-family: TikTokFont;
+  src: url("/assets/fonts/TikTokFont-Regular.woff2");
+  font-weight: 400;
+}
+
+@font-face {
+  font-family: TikTokFont;
+  src: url("/assets/fonts/TikTokFont-Semibold.woff2");
+  font-weight: 600;
 }
 
 //Custom tippy tooltip
