--- a/src/components/GlobalStyles/GlobalStyle.scss
+++ b/src/components/GlobalStyles/GlobalStyle.scss
@@ -6,6 +6,7 @@
   --white: rgb(255, 255, 255);
   --text-color: #161823;
 
+  --font-family: "TikTokFont", sans-serif;
   //DefaultLayout'
   --default-layout-header-height: 60px;
   --default-layout-width: 1150px;
@@ -23,7 +24,7 @@ html {
 }
 
 body {
-  font-family: "TikTokFont", sans-serif;
+  font-family: var(--font-family);
   font-size: 1.6rem;
   line-height: 1.5;
   text-rendering: optimizeSpeed;
