--- a/src/components/Layout/components/Search/Search.module.scss
+++ b/src/components/Layout/components/Search/Search.module.scss
@@ -29,6 +29,7 @@
     font-weight: 600;
     caret-color: var(--primary);
     background-color: transparent;
+    font-family: var(--font-family);
   }
 
   input:not(:placeholder-shown) ~ .search-btn {
