--- a/src/layouts/components/Search/Search.module.scss
+++ b/src/layouts/components/Search/Search.module.scss
@@ -30,6 +30,7 @@
     caret-color: var(--primary);
     background-color: transparent;
     font-family: var(--font-family);
+    padding-right: 40px;
   }
 
   input:not(:placeholder-shown) ~ .search-btn {
